--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "engines": {
+    "node": ">=12"
+  },
+  "type": "module",
+	"exports": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/alotoftype/starwars-names/issues"
   },
-  "homepage": "https://github.com/alotoftype/starwars-names#readme"
+  "homepage": "https://github.com/alotoftype/starwars-names#readme",
+  "dependencies": {
+    "unique-random-array": "3.0.0"
+  }
 }
